syntax = "proto3";

service CommunicationService {
  rpc RegisterServer (RegisterRequest) returns (RegisterResponse);
  rpc SyncData (SyncRequest) returns (SyncResponse);
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}

message RegisterRequest {
  string serverName = 1;
  string ip = 2;
  int32 port = 3;
}

message RegisterResponse {
  string message = 1;
  bool success = 2;
}

message SyncRequest {
  string data = 1;
}

message SyncResponse {
  string status = 1;
}

message HeartbeatRequest {
  string serverName = 1;
}

message HeartbeatResponse {
  string status = 1;
}
